fix image max height in Scan header on mobile

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3750,6 +3750,7 @@ a.result + #matches.mobile,
 @media (max-width:768px)
 {
 
+   
    /* ------------------------------------------------------------------------------------------------------------------------ home/topbar */ 
    #root .nav {  height:60px; padding:0 10px; top:0px; transition:all 400ms ease-in-out; 
       z-index: 100001;
@@ -4048,7 +4049,8 @@ a.result + #matches.mobile,
 
    .resource .data h2.intro + h2 { padding-left:20px; }
 
-
+   .firstImage img { max-height:100vh; }
+   
    /* ------------------------------------------------------------------------------------------------------------------------ topbar etc. */
 
    .resource .title h2 { font-size:22px;}
@@ -4095,7 +4097,6 @@ a.result + #matches.mobile,
    #latest .slide-bg > div .header {
       height: calc((100vh - 2*40px - 30px - 2*15px) / 3);
    }
-
 
 }
 
